# 42-advanced

./: .gitignore  README.md
Algo & AI & Data/piscine-data-science/data-science-0/: Dockerfile  docker-compose.yml
Algo & AI & Data/piscine-data-science/data-science-0/ex02/: table.sh
Algo & AI & Data/piscine-data-science/data-science-0/ex03/: automatic_table.sh
Algo & AI & Data/python-for-data-science/python-0-starting/ex00/: Hello.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex01/: format_ft_time.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex02/: find_ft_type.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex03/: NULL_not_found.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex04/: whatis.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py  tester.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex09/ft_package/: utils.py
Algo & AI & Data/python-for-data-science/python-0-starting/ex09/tests/: tester.py
Cryptography & Maths/matrix/: Makefile  bonus.cpp  ex00.aux  ex00.md  ex00.tex  main.cpp  matrix
Cryptography & Maths/matrix/includes/: Matrix.hpp  Utils.hpp  Vector.hpp
Cryptography & Maths/matrix/mandatory/: input.txt
Cryptography & Maths/matrix/python/: Vector.py  main.py
Cryptography & Maths/matrix/tmps/: Matrix.tpp  Utils.tpp  Vector.tpp
Cryptography & Maths/ready-set-boole/: Makefile  main.cpp
Cryptography & Maths/ready-set-boole/includes/: ft_ready_set_boole.hpp
(+183 files in other folders)
